--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -354,6 +354,12 @@ main .category {
   align-items: center;
   overflow: hidden;
   border-bottom: 1px dashed rgb(181, 181, 181);
+  /*    div{
+         @include sizes();
+         @include displayFlex();
+         flex-wrap: wrap;
+         overflow-y: scroll;
+     } */
 }
 main .category h2 {
   width: 100%;
@@ -366,16 +372,6 @@ main .category h2 {
   padding-left: 10px;
   border-bottom-left-radius: 60px;
   border-bottom-right-radius: 60px;
-}
-main .category div {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-  overflow-y: scroll;
 }
 main .category #productos-bolsos, main .category #productos-tenis {
   display: flex;
