--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -362,13 +362,12 @@ main{
         div{
             @include sizes(9000px,100%);
             @include displayFlex($flexDirection:row);
-            flex-wrap: wrap;
             overflow-x: scroll;
             overflow-y: hidden;
             gap: 5px;
         
             div{
-                @include sizes(90%,90%);
+                @include sizes(auto,90%);
                 @include displayFlex($justifyContent: space-between); 
                 box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
                 background-repeat: no-repeat;
