--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -376,11 +376,12 @@ main .category div {
   align-items: center;
   overflow-x: scroll;
   overflow-y: hidden;
+  position: relative;
   gap: 5px;
 }
 main .category div div {
   width: auto;
-  height: 90%;
+  height: 95%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -407,7 +408,7 @@ main .category div div div span {
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main .category div div div span button {
-  width: 170px;
+  width: 120px;
   height: 30px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   border: 1px solid #353535;
