--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -368,7 +368,7 @@ main{
             gap: 5px;
         
             div{
-                @include sizes(auto,95%);
+                @include sizes(380px,95%);
                 @include displayFlex($justifyContent: space-between); 
                 box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
                 background-repeat: no-repeat;
