--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -346,7 +346,7 @@ main{
 
     //Categorias
     .category{
-        @include sizes($height: 700px);
+        @include sizes($width: 450px, $height: 700px);
         @include displayFlex($justifyContent: space-between);
         overflow: hidden;
         border-bottom: 1px dashed rgb(181, 181, 181);
@@ -362,9 +362,8 @@ main{
         div{
             @include sizes(9000px,100%);
             @include displayFlex($flexDirection:row);
-            overflow-x: scroll;
-            overflow-y: hidden;
-            position: relative;
+            overflow-x: auto;
+            scroll-behavior: smooth;
             gap: 5px;
         
             div{
