--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -348,7 +348,7 @@ main{
     .category{
         @include sizes($width: 450px, $height: 700px);
         @include displayFlex($justifyContent: space-between);
-        overflow: hidden;
+        //overflow: hidden;
         border-bottom: 1px dashed rgb(181, 181, 181);
 
         h2{
