--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -346,12 +346,13 @@ main #categorySection .scrollSection img {
   transform: rotate(-90deg);
 }
 main .category {
-  width: 450px;
+  width: 100%;
   height: 700px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
   border-bottom: 1px dashed rgb(181, 181, 181);
 }
 main .category h2 {
@@ -367,33 +368,28 @@ main .category h2 {
   border-bottom-right-radius: 60px;
 }
 main .category div {
-  width: 9000px;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  overflow-x: auto;
+  overflow-y: auto;
   scroll-behavior: smooth;
   gap: 5px;
 }
 main .category div div {
-  width: 380px;
+  width: 95%;
   height: 95%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  overflow: hidden;
 }
 main .category div div div {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 main .category div div div span {
   width: 100%;
