--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -386,6 +386,9 @@ main .category div div {
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 main .category div div div {
   width: 100%;
