--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -369,7 +369,7 @@ main{
             cursor: n-resize;
         
             div{
-                @include sizes(60%,45%);
+                @include sizes(150px,45%);
                 @include displayFlex($justifyContent: space-between); 
                 box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
                 background-repeat: no-repeat;
