--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -381,7 +381,7 @@ main .category div {
   cursor: n-resize;
 }
 main .category div div {
-  width: 150px;
+  width: 200px;
   height: 45%;
   display: flex;
   justify-content: space-between;
@@ -395,6 +395,7 @@ main .category div div {
 main .category div div div {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 main .category div div div span {
   width: 100%;
