--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -369,7 +369,7 @@ main{
             cursor: n-resize;
         
             div{
-                @include sizes(150px,45%);
+                @include sizes(200px,45%);
                 @include displayFlex($justifyContent: space-between); 
                 box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
                 background-repeat: no-repeat;
@@ -378,7 +378,7 @@ main{
 
                 div{
                     @include sizes();
-
+                    overflow: hidden;
                     span{
                         @include sizes(100%,50px);
                         @include displayFlex($flexDirection:row, $justifyContent: space-around);
