--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -244,6 +244,23 @@ main {
   align-items: flex-start;
   margin-top: 120px;
 }
+main #firstContent {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  overflow: hidden;
+  position: relative;
+}
+main #firstContent .slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+main #firstContent .slides img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 main #presentation {
   width: 100%;
   height: 900px;
