--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -267,6 +267,23 @@ main{
     align-items: flex-start;
     margin-top: 120px;
     
+    //Contenedor de imagenes principal
+    #firstContent{
+        @include sizes();
+        border: 1px solid black;
+        overflow: hidden;
+        position: relative;
+
+        .slides{
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+
+            img{
+                @include sizes();
+                object-fit: cover;
+            }
+        }
+    }
     //Contenedor de presentación
     #presentation{
     @include sizes($height: 900px);
