Changing styles and adding new feature in index

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -276,6 +276,7 @@ main{
 
         .slides{
             display: flex;
+            flex-direction: column;
             transition: transform 0.5s ease-in-out;
 
             img{
