--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -253,6 +253,7 @@ main #firstContent {
 }
 main #firstContent .slides {
   display: flex;
+  flex-direction: column;
   transition: transform 0.5s ease-in-out;
 }
 main #firstContent .slides img {
