--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -280,7 +280,7 @@ main{
             transition: transform 0.5s ease-in-out;
 
             img{
-                @include sizes();
+                @include sizes($height: 100%);
                 object-fit: cover;
             }
         }
