Changing styles and adding new feature in index

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -78,7 +78,7 @@ $fontPlaywrite: "Playwrite CU", cursive;
 
 //Html
 html{
-    @include sizes($height: 2200px);
+    @include sizes($height: 100%);
     @include displayFlex();
     scroll-behavior: smooth;
     scroll-padding: 2rem;
