--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  height: 100%;
+  height: 2200px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -246,11 +246,13 @@ main {
 }
 main #firstContent {
   width: 100%;
-  height: 900px;
+  height: 100%;
   overflow: hidden;
   position: relative;
 }
 main #firstContent .slides {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   transition: transform 0.5s ease-in-out;
