--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -251,15 +251,14 @@ main #firstContent {
   position: relative;
 }
 main #firstContent .slides {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.8s ease-in-out;
 }
 main #firstContent .slides img {
   width: 100%;
-  height: 900px;
+  min-height: 100vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
