--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -39,7 +39,8 @@ nav {
   align-items: center;
   position: fixed;
   top: 0px;
-  background-color: #e3e3e3;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   z-index: 10500;
   gap: 20px;
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
