--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -102,7 +102,7 @@ nav{
     @include displayFlex();
     position: fixed;
     top:0px;
-    background-color: $lightFontColor;
+    backdrop-filter: blur(5px);
     z-index: 10500;
     gap: 20px;
     box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
