--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -243,7 +243,7 @@ main {
   align-items: center;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-top: 120px;
+  margin-top: 60px;
 }
 main #firstContent {
   width: 100%;
@@ -257,11 +257,35 @@ main #firstContent .slides {
   flex-direction: column;
   transition: transform 0.8s ease-in-out;
 }
-main #firstContent .slides img {
+main #firstContent .slides div {
   width: 100%;
   min-height: 100vh;
-  -o-object-fit: cover;
-     object-fit: cover;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+main #firstContent .slides div button {
+  width: 150px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #e3e3e3;
+  border-radius: 60px;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  color: #353535;
+  font-weight: 600;
+  font-family: "Afacad Flux", sans-serif;
+  font-size: 16px;
+}
+main #firstContent .slides div button:hover {
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main #presentation {
   width: 100%;
