--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -39,11 +39,8 @@ nav {
   align-items: center;
   position: fixed;
   top: 0px;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
   z-index: 10500;
   gap: 20px;
-  box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 }
 nav .topNav {
   width: 100%;
@@ -264,6 +261,7 @@ main #firstContent .slides div {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  position: relative;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -283,6 +281,7 @@ main #firstContent .slides div button {
   font-weight: 600;
   font-family: "Afacad Flux", sans-serif;
   font-size: 16px;
+  bottom: 100px;
 }
 main #firstContent .slides div button:hover {
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
