--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -102,10 +102,8 @@ nav{
     @include displayFlex();
     position: fixed;
     top:0px;
-    backdrop-filter: blur(10px);
     z-index: 10500;
     gap: 20px;
-    box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 
     .topNav{
         @include sizes(100%);
@@ -283,6 +281,7 @@ main{
                 width: 100%;
                 min-height: 100vh;
                 @include displayFlex();
+                position: relative;
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -297,6 +296,7 @@ main{
                     font-weight: $bold;
                     font-family: $afacadFont;
                     font-size: $md;
+                    bottom: 100px;
                 }
                 button:hover{
                     background-image: $secondBackgroundImage;
