--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  height: 2200px;
+  height: 2500px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -41,6 +41,8 @@ nav {
   top: 0px;
   z-index: 10500;
   gap: 20px;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }
 nav .topNav {
   width: 100%;
@@ -240,7 +242,7 @@ main {
   align-items: center;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-top: 60px;
+  margin-top: 50px;
 }
 main #firstContent {
   width: 100%;
