--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -78,7 +78,7 @@ $fontPlaywrite: "Playwrite CU", cursive;
 
 //Html
 html{
-    @include sizes($height: 2200px);
+    @include sizes($height: 2500px);
     @include displayFlex();
     scroll-behavior: smooth;
     scroll-padding: 2rem;
@@ -104,6 +104,7 @@ nav{
     top:0px;
     z-index: 10500;
     gap: 20px;
+    backdrop-filter: blur(3px);
 
     .topNav{
         @include sizes(100%);
@@ -263,7 +264,7 @@ main{
     @include displayFlex();
     justify-content: flex-start;
     align-items: flex-start;
-    margin-top: 60px;
+    margin-top: 50px;
     
     //Contenedor de imagenes principal
     #firstContent{
