--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -305,30 +305,7 @@ main #presentation {
   animation: sideIn 0.5s ease forwards;
   gap: 15px;
 }
-main #presentation h2 {
-  width: 50%;
-  height: 30px;
-  margin-bottom: 15px;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 20px;
-  border: 1px solid #353535;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  gap: 5px;
-}
-main #presentation h2 img {
-  width: 30px;
-  height: auto;
-}
-main #presentation h2:hover {
-  transform: translateY(-5px);
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
-}
-main #presentation .textPresentation, main #presentation .links {
+main #presentation .textPresentation {
   width: 100%;
   height: 100%;
   display: flex;
@@ -336,11 +313,11 @@ main #presentation .textPresentation, main #presentation .links {
   flex-direction: column;
   align-items: center;
 }
-main #presentation .textPresentation img, main #presentation .links img {
+main #presentation .textPresentation img {
   width: 40%;
   height: auto;
 }
-main #presentation .textPresentation p, main #presentation .links p {
+main #presentation .textPresentation p {
   width: 100%;
   height: 100%;
   display: flex;
