--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -268,13 +268,13 @@ main #firstContent .slides div {
   background-repeat: no-repeat;
 }
 main #firstContent .slides div button {
-  width: 150px;
+  width: 180px;
   height: 50px;
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  border: 1px solid #e3e3e3;
+  gap: 5px;
   border-radius: 60px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   color: #353535;
