--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  height: 2500px;
+  height: 3100px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -275,6 +275,7 @@ main #firstContent .slides div button {
   flex-direction: row;
   align-items: center;
   gap: 5px;
+  border: 0px;
   border-radius: 60px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   color: #353535;
