--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,7 +12,7 @@ html {
   flex-direction: column;
   align-items: center;
   scroll-behavior: smooth;
-  scroll-padding: 2rem;
+  scroll-padding: 3rem;
   justify-content: flex-start;
   overflow-x: hidden;
 }
@@ -306,9 +306,8 @@ main #presentation {
   align-items: center;
   padding: 15px;
   cursor: default;
-  transform: translateX(2500px);
-  animation: sideIn 0.5s ease forwards;
   gap: 15px;
+  margin-top: 50px;
 }
 main #presentation .textPresentation {
   width: 100%;
