--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -321,6 +321,11 @@ main #presentation .textPresentation img {
   width: 40%;
   height: auto;
 }
+main #presentation .textPresentation h1 {
+  width: 100%;
+  height: 40px;
+  font-size: 600;
+}
 main #presentation .textPresentation p {
   width: 100%;
   height: 100%;
