--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -354,6 +354,9 @@ main .category {
   align-items: center;
   overflow: hidden;
   border-bottom: 1px dashed rgb(181, 181, 181);
+  background-image: url(/public/imgs/presentationBackground.png);
+  background-position: center;
+  background-repeat: repeat;
 }
 main .category h2 {
   width: 100%;
@@ -362,7 +365,7 @@ main .category h2 {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   padding-left: 10px;
   border-bottom-left-radius: 60px;
   border-bottom-right-radius: 60px;
@@ -381,7 +384,7 @@ main .category div {
   cursor: n-resize;
 }
 main .category div div {
-  width: 230px;
+  width: 300px;
   height: 50%;
   display: flex;
   justify-content: space-between;
