--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -350,11 +350,14 @@ main{
         @include displayFlex($justifyContent: space-between);
         overflow: hidden;
         border-bottom: 1px dashed rgb(181, 181, 181);
+        background-image: url(/public/imgs/presentationBackground.png);
+        background-position: center;
+        background-repeat: repeat;
 
         h2{
             @include sizes($height: 40px);
             @include displayFlex();
-            background-image: $cardBackgroundImage;
+            background-image: $secondBackgroundImage;
             padding-left: 10px;
             border-bottom-left-radius: 60px;
             border-bottom-right-radius: 60px;
@@ -369,7 +372,7 @@ main{
             cursor: n-resize;
         
             div{
-                @include sizes(230px,50%);
+                @include sizes(300px,50%);
                 @include displayFlex($justifyContent: space-between); 
                 box-shadow: 0px 0px 5px 1px rgb(166, 166, 166);
                 background-repeat: no-repeat;
