--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -24,7 +24,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   font-family: "Afacad Flux", sans-serif;
   justify-content: flex-start;
   align-items: flex-start;
@@ -52,7 +52,7 @@ nav .topNav {
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   cursor: default;
   gap: 10px;
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
@@ -140,7 +140,7 @@ nav header .mobileHeader ul #catalogo:hover {
   box-shadow: 0px 0px 50px 10px #414141;
   overflow: hidden;
   gap: 20px;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
 }
 .burguerMenu div {
   width: 90%;
@@ -210,7 +210,7 @@ nav header .mobileHeader ul #catalogo:hover {
   gap: 10px;
 }
 .burguerMenu .socialMedia p {
-  color: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  color: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   background-color: transparent;
   font-weight: 600;
   font-size: 22px;
@@ -223,7 +223,7 @@ nav header .mobileHeader ul #catalogo:hover {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-color: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   color: #353535;
   font-size: 14px;
 }
@@ -312,7 +312,7 @@ main #categorySection .links div span {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   margin-top: -40px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 1px #414141;
@@ -366,7 +366,7 @@ main .category h2 {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   padding-left: 10px;
   border-bottom-left-radius: 60px;
   border-bottom-right-radius: 60px;
@@ -409,12 +409,12 @@ main .category div div div span {
   flex-direction: row;
   align-items: center;
   font-size: 22px;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
 }
 main .category div div div span button {
   width: 120px;
   height: 30px;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   border: 1px solid #353535;
   border-radius: 60px;
   font-size: 14px;
@@ -443,10 +443,9 @@ main .category p {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  align-items: flex-start;
   border-radius: 60px;
   font-weight: 600;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
   border: 1px solid #353535;
 }
 
