--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -1,6 +1,6 @@
 //Variables
 $backgroundImage: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
-$secondBackgroundImage: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+$secondBackgroundImage: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
 $cardBackgroundImage: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 $sm: 12px;
 $md: 18px;
@@ -419,7 +419,6 @@ main{
         p{
             @include sizes(300px,30px);
             @include displayFlex();
-            align-items: flex-start;
             border-radius: 60px;
             font-weight: $bold;
             background-image: $secondBackgroundImage;
