Changing styles and adding new feature in index

--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -1,6 +1,6 @@
 //Variables
 $backgroundImage: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
-$secondBackgroundImage: linear-gradient(-225deg, #bbf4e3 0%, #FFE6FA 100%);
+$secondBackgroundImage: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
 $cardBackgroundImage: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 $sm: 12px;
 $md: 18px;
