--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -466,11 +466,14 @@ main .category p {
 
 footer {
   width: 100%;
-  height: 300px;
+  height: 400px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: row;
   align-items: center;
+  z-index: 10999;
+  box-shadow: 0px 0px 20px 1px #414141;
+  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
 }
 footer img {
   width: 30%;
@@ -486,26 +489,21 @@ footer div {
   gap: 10px;
   cursor: default;
 }
-footer div img {
-  cursor: pointer;
-  width: 30%;
-  height: auto;
-  transition: all 0.3s ease;
-}
-footer div img:hover {
-  transform: scale(1.05);
-}
 footer div ul {
-  width: 100%;
+  width: 50%;
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   align-items: flex-start;
+  padding-left: 10px;
 }
-footer div ul li {
-  list-style: none;
+footer div ul span {
+  cursor: pointer;
+}
+footer div ul span:hover {
+  border-bottom: 1px solid #353535;
 }
 
 @keyframes zoomAnimation {
