--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -443,8 +443,11 @@ main{
 
 //Footer
 footer{
-    @include sizes($height: 300px);
-    @include displayFlex($flexDirection:row, $justifyContent:space-around);
+    @include sizes($height: 400px);
+    @include displayFlex($flexDirection:row);
+    z-index: 10999;
+    box-shadow: 0px 0px 20px 1px $shadow;
+    background-image: $secondBackgroundImage;
 
     img{
         @include sizes(30%,auto);
@@ -455,21 +458,17 @@ footer{
         gap: 10px;
         cursor: default;
 
-        img{
-            cursor: pointer;
-            @include sizes(30%,auto);
-            transition: all 0.3s ease;
-        }
-        img:hover{
-            transform: scale(1.05);
-        }
         ul{
-            @include sizes();
+            @include sizes(50%,100%);
             @include displayFlex();
             align-items: flex-start;
+            padding-left: 10px;
 
-            li{
-                list-style: none;
+            span{
+                cursor: pointer;
+            }
+            span:hover{
+                border-bottom: 1px solid $darkFontColor;
             }
         }
     }
