--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -355,9 +355,6 @@ main .category {
   align-items: center;
   overflow: hidden;
   border-bottom: 1px dashed rgb(181, 181, 181);
-  background-image: url(/public/imgs/presentationBackground.png);
-  background-position: center;
-  background-repeat: repeat;
 }
 main .category h2 {
   width: 100%;
@@ -447,6 +444,93 @@ main .category p {
   font-weight: 600;
   background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
   border: 1px solid #353535;
+}
+main .sectionForm {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 12000;
+  display: none;
+}
+main .sectionForm form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  height: 300px;
+  border-radius: 20px;
+  border: 1px solid #414141;
+  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  gap: 5px;
+}
+main .sectionForm form #errorMessage {
+  display: none;
+}
+main .sectionForm form p {
+  font-size: 22px;
+}
+main .sectionForm form input {
+  width: 90%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 10px;
+  font-size: 22px;
+  font-family: "Afacad Flux", sans-serif;
+}
+main .sectionForm form button {
+  padding: 2px;
+  border: 0px solid #e3e3e3;
+  border-radius: 5px;
+  background-color: transparent;
+  transition: all 0.3s ease;
+  font-family: "Afacad Flux", sans-serif;
+  width: 80%;
+  height: 50px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 22px;
+  color: #353535;
+  cursor: pointer;
+  background-color: #e3e3e3;
+  box-shadow: 0px 0px 20px 1px black;
+  box-shadow: none;
+  margin-top: 0px;
+}
+main .sectionForm form button:hover {
+  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+}
+main .sectionForm button {
+  margin-top: -60px;
+  padding: 2px;
+  border: 0px solid #e3e3e3;
+  border-radius: 5px;
+  background-color: transparent;
+  transition: all 0.3s ease;
+  font-family: "Afacad Flux", sans-serif;
+  width: 70%;
+  height: 50px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 22px;
+  color: #353535;
+  cursor: pointer;
+  background-color: #e3e3e3;
+  box-shadow: 0px 0px 20px 1px black;
+}
+main .sectionForm button:hover {
+  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
 }
 
 #whatsapp {
