--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -24,7 +24,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   font-family: "Afacad Flux", sans-serif;
   justify-content: flex-start;
   align-items: flex-start;
@@ -52,7 +52,7 @@ nav .topNav {
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   cursor: default;
   gap: 10px;
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
@@ -140,7 +140,7 @@ nav header .mobileHeader ul #catalogo:hover {
   box-shadow: 0px 0px 50px 10px #414141;
   overflow: hidden;
   gap: 20px;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 .burguerMenu div {
   width: 90%;
@@ -191,7 +191,7 @@ nav header .mobileHeader ul #catalogo:hover {
   transition: all 0.3s ease;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
-  font-size: 22px;
+  font-size: 23px;
 }
 .burguerMenu ul li img {
   width: 30px;
@@ -210,10 +210,10 @@ nav header .mobileHeader ul #catalogo:hover {
   gap: 10px;
 }
 .burguerMenu .socialMedia p {
-  color: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  color: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   background-color: transparent;
   font-weight: 600;
-  font-size: 22px;
+  font-size: 23px;
   cursor: default;
 }
 .burguerMenu p {
@@ -223,7 +223,7 @@ nav header .mobileHeader ul #catalogo:hover {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-color: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   color: #353535;
   font-size: 14px;
 }
@@ -312,7 +312,7 @@ main #categorySection .links div span {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   margin-top: -40px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 1px #414141;
@@ -363,7 +363,7 @@ main .category h2 {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   padding-left: 10px;
   border-bottom-left-radius: 60px;
   border-bottom-right-radius: 60px;
@@ -405,13 +405,13 @@ main .category div div div span {
   justify-content: space-around;
   flex-direction: row;
   align-items: center;
-  font-size: 22px;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  font-size: 23px;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main .category div div div span button {
   width: 120px;
   height: 30px;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   border: 1px solid #353535;
   border-radius: 60px;
   font-size: 14px;
@@ -430,7 +430,7 @@ main .category div div div span:nth-child(2) {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   height: 40px;
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 600;
 }
 main .category p {
@@ -442,7 +442,7 @@ main .category p {
   align-items: center;
   border-radius: 60px;
   font-weight: 600;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   border: 1px solid #353535;
 }
 main .sectionForm {
@@ -469,14 +469,14 @@ main .sectionForm form {
   height: 300px;
   border-radius: 20px;
   border: 1px solid #414141;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   gap: 5px;
 }
 main .sectionForm form #errorMessage {
   display: none;
 }
 main .sectionForm form p {
-  font-size: 22px;
+  font-size: 23px;
 }
 main .sectionForm form input {
   width: 90%;
@@ -486,7 +486,7 @@ main .sectionForm form input {
   flex-direction: column;
   align-items: center;
   padding-left: 10px;
-  font-size: 22px;
+  font-size: 23px;
   font-family: "Afacad Flux", sans-serif;
 }
 main .sectionForm form button {
@@ -500,16 +500,17 @@ main .sectionForm form button {
   height: 50px;
   text-align: center;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 23px;
   color: #353535;
   cursor: pointer;
   background-color: #e3e3e3;
   box-shadow: 0px 0px 20px 1px black;
   box-shadow: none;
   margin-top: 0px;
+  border-radius: 60px;
 }
 main .sectionForm form button:hover {
-  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+  background-image: linear-gradient(to top, #fcddd4 0%, #e8dad0 100%);
 }
 main .sectionForm button {
   margin-top: -60px;
@@ -523,14 +524,14 @@ main .sectionForm button {
   height: 50px;
   text-align: center;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 23px;
   color: #353535;
   cursor: pointer;
   background-color: #e3e3e3;
   box-shadow: 0px 0px 20px 1px black;
 }
 main .sectionForm button:hover {
-  background-image: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
+  background-image: linear-gradient(to top, #fcddd4 0%, #e8dad0 100%);
 }
 
 #whatsapp {
@@ -557,7 +558,7 @@ footer {
   align-items: center;
   z-index: 10999;
   box-shadow: 0px 0px 20px 1px #414141;
-  background-image: linear-gradient(-225deg, #d8f8ef 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 footer img {
   width: 30%;
