--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -503,7 +503,6 @@ main .sectionForm form button {
   font-size: 23px;
   color: #353535;
   cursor: pointer;
-  background-color: #e3e3e3;
   box-shadow: 0px 0px 20px 1px black;
   box-shadow: none;
   margin-top: 0px;
@@ -527,8 +526,8 @@ main .sectionForm button {
   font-size: 23px;
   color: #353535;
   cursor: pointer;
-  background-color: #e3e3e3;
   box-shadow: 0px 0px 20px 1px black;
+  border-radius: 60px;
 }
 main .sectionForm button:hover {
   background-image: linear-gradient(to top, #fcddd4 0%, #e8dad0 100%);
