--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  height: 8000px;
+  height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
